tests/invalid/circular_dependency/a.py
from b import b_func

def a_func() -> int:
    return b_func() + 1